[gd_scene load_steps=10 format=2]

[ext_resource path="res://game.gd" type="Script" id=1]
[ext_resource path="res://bat.tscn" type="PackedScene" id=2]
[ext_resource path="res://line.png" type="Texture" id=3]
[ext_resource path="res://Press_Start_2P/Font.tres" type="DynamicFont" id=4]
[ext_resource path="res://topborder.tscn" type="PackedScene" id=5]
[ext_resource path="res://sideborder.tscn" type="PackedScene" id=6]
[ext_resource path="res://ball.gd" type="Script" id=7]
[ext_resource path="res://ball.png" type="Texture" id=8]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0

[node name="Node" type="Node" index="0"]

script = ExtResource( 1 )

[node name="bat1" parent="." index="0" instance=ExtResource( 2 )]

position = Vector2( 155, 320 )

[node name="line" type="Sprite" parent="." index="1"]

position = Vector2( 512, 326 )
scale = Vector2( 1, 13.125 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="label1" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 430.0
margin_top = 10.0
margin_right = 510.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
text = "0"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Rect", "Theme", "custom_fonts" ]

[node name="label2" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 510.0
margin_top = 10.0
margin_right = 590.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
text = "0"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="bottomborder" parent="." index="4" instance=ExtResource( 5 )]

[node name="topborder" parent="." index="5" instance=ExtResource( 5 )]

position = Vector2( 512, 96 )

[node name="rightborder" parent="." index="6" instance=ExtResource( 6 )]

[node name="leftborder" parent="." index="7" instance=ExtResource( 6 )]

position = Vector2( 50, 320 )

[node name="ball" type="Area2D" parent="." index="8"]

position = Vector2( 512, 320 )
input_pickable = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.0
angular_damp = -1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 7 )
_sections_unfolded = [ "Linear", "Transform", "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ball" index="0"]

scale = Vector2( 1.6, 1.6 )
shape = SubResource( 1 )
_sections_unfolded = [ "Material", "Transform" ]

[node name="ball_sprite" type="Sprite" parent="ball" index="1"]

texture = ExtResource( 8 )

[node name="bat2" parent="." index="9" instance=ExtResource( 2 )]

position = Vector2( 855, 320 )

[connection signal="area_entered" from="ball" to="ball" method="area_entered"]


